--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Smolify",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://sophie-tsai.github.io/Smolify",
+  "homepage": "http://sophie-tsai.github.io/smolify",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
